--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>내 첫 Electron 앱이지롱</title>
+  <title>내 첫 Electron 앱이지롱사실앱아니지롱</title>
   <style>
     /* CSS로 스타일 지정 (WinForms의 속성 창과 비슷) */
     body {
