헤더 분리 , 타이틀 클릭 시 메인 화면 바로가기

--- a/html/03 main.html
+++ b/html/03 main.html
@@ -7,10 +7,7 @@
 </head>
 <body>
   <div class="screen">
-    <header class="main-header">
-      <h1>CountHub</h1>
-      <span id="current-user" class="current-user"></span>
-    </header>
+    <div id="app-header"></div>
     <div class="main-content">
       <div class="menu-buttons">
         <button id="inbound-btn">입고</button>
@@ -18,6 +15,7 @@
       </div>
     </div>
   </div>
+  <script src="../js/header.js"></script>
   <script src="../js/renderer-main.js"></script>
 </body>
 </html>
