--- a/html/04-02 outbound.html
+++ b/html/04-02 outbound.html
@@ -7,15 +7,12 @@
 </head>
 <body>
   <div class="screen">
-    <header class="main-header">
-      <button type="button" id="back-btn" class="back-btn">← 메인</button>
-      <h1>출고</h1>
-      <span id="current-user" class="current-user"></span>
-    </header>
+    <div id="app-header"></div>
     <div class="main-content">
       <p class="page-desc">출고 화면입니다. 여기에 출고 관련 UI를 구성하세요.</p>
     </div>
   </div>
+  <script src="../js/header.js"></script>
   <script src="../js/renderer-outbound.js"></script>
 </body>
 </html>
