--- a/html/03 main.html
+++ b/html/03 main.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>CountHub</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style/common-style.css">
+  <link rel="stylesheet" href="../style/main-style.css">
 </head>
 <body>
   <div class="screen">
