--- a/html/04-02 outbound.html
+++ b/html/04-02 outbound.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>CountHub - 출고</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style/common-style.css">
+  <link rel="stylesheet" href="../style/outbound-style.css">
+  <link rel="stylesheet" href="../style/main-style.css">
 </head>
 <body>
   <div class="screen">
