--- a/html/02 login.html
+++ b/html/02 login.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>CountHub - 로그인</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style/login-style.css">
+  <link rel="stylesheet" href="../style/common-style.css">
 </head>
 <body>
   <div id="login-screen" class="screen">
