입고타이틀넣음

--- a/html/04-01 inbound.html
+++ b/html/04-01 inbound.html
@@ -10,6 +10,11 @@
 <body>
   <div class="screen">
     <div id="app-header"></div>
+    <div class="inbound-header">
+      <div class="inbound-header-inner">
+        <h2 class="inbound-title">입고</h2>
+      </div>
+    </div>
     <div class="main-content">
       <p class="page-desc">입고 화면입니다. 여기에 입고 관련 UI를 구성하세요.</p>
     </div>
