입고검수 파일 양식 UI 피드백 강화
DB에서 양식을 성공적으로 가져온 경우, 기본값이 설정되었음을 UI에서 확인할 수 있도록 수정 (예: 뱃지 표시 또는 텍스트 변경)

--- a/html/04-01 inbound.html
+++ b/html/04-01 inbound.html
@@ -119,6 +119,7 @@
               <button id="btn-select-inbound-file" class="excel-btn">
                  입고파일양식 엑셀첨부 (.xlsx .xls)
               </button>
+              <span id="inbound-template-badge" class="template-badge" style="display: none;">기본양식 적용됨</span>
             </div>
           </div>
           <div class="excel-upload">
@@ -126,6 +127,7 @@
               <button id="btn-select-verify-file" class="excel-btn">
                  입고검수파일양식 엑셀첨부 (.xlsx .xls)
               </button>
+              <span id="verify-template-badge" class="template-badge" style="display: none;">기본양식 적용됨</span>
             </div>
           </div>
         </div>
