검수지 엑셀파일 데이터 정리_ PLT 인식후 수량합산, 상품명없는 행 제거

--- a/html/04-01 inbound.html
+++ b/html/04-01 inbound.html
@@ -17,7 +17,7 @@
     </div>
     <div class="inbound-content">
           <div class="excel-upload">
-          <label class="excel-label">입고예정엑셀파일(셀러) : </label>
+          <label class="excel-label">입고예정엑셀파일(패킹리스트) : </label>
           <div class="excel-controls">
             <button id="btn-select-excel" class="excel-btn">
               엑셀파일 .xlsx, .xls 양식만 가능
@@ -27,7 +27,7 @@
       <div class="inbound-form">
         <div class="grid-row">
           <div class="field">
-            <div class="field-label">셀러</div>
+            <div class="field-label">출고센터</div>
             <div class="field-control">
               <select id="sel-seller">
                 <option value="">선택</option>
