필수요소 변경(sku->상품명)

--- a/html/04-01 inbound.html
+++ b/html/04-01 inbound.html
@@ -75,13 +75,13 @@
 
         <div class="grid-row">
           <div class="field">
-            <div class="field-label-must">SKU *</div>
+            <div class="field-label">SKU</div>
             <div class="field-control">
               <input id="sku" type="text" value="" maxlength="1">
             </div>
           </div>
           <div class="field">
-            <div class="field-label">상품명</div>
+            <div class="field-label-must">상품명 *</div>
             <div class="field-control">
               <input id="product-name" type="text" value="" maxlength="1">
             </div>
