출고센터 입력 칸생성

--- a/html/04-01 inbound.html
+++ b/html/04-01 inbound.html
@@ -20,6 +20,13 @@
       </div>
     </div>
     <div class="inbound-content">
+      <div class="excel-upload" style="margin-bottom: 10px;">
+    <label class="excel-label">출고센터 : </label>
+    <div class="excel-controls">
+      <input id="input-release-center" type="text" placeholder="출고센터명을 입력하세요" 
+             style="width: 160px; padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
+    </div>
+  </div>
       <div class="excel-upload">
         <label class="excel-label">입고예정엑셀파일(패킹리스트) : </label>
         <div class="excel-controls">
@@ -31,7 +38,7 @@
       <div class="inbound-form">
         <div class="grid-row">
           <div class="field">
-            <div class="field-label">출고센터</div>
+            <div class="field-label">셀러</div>
             <div class="field-control">
               <select id="sel-seller">
                 <option value="">선택</option>
